[package]
name = "txp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
rand = "0.8.5"
bitcoin = "0.29.1"
log = "0.4.17"
bytes = "1.2.1"
anyhow = "1.0.61"
env_logger = "0.9.0"
clap = { version = "3.2.17", features = ["derive"] }

[lib]
name = "txp"
path = "src/lib.rs"
